# record-activity

./: .flake8  .gitignore  COPYING  CameraActivity.py  MANIFEST  Makefile  NEWS  README.md  RecordActivity.py  _camera.c  aplay.py  button.py  collab.py  color.py  constants.py  controller.py  drawWaveform.py  glive.py  glivex.py  gplay.py  greplay.py  hr.po  hw.py  iconcombobox.py  image_display.py  instance.py  mediaview.py  menubar.py  mesh.py  model.py  network.py  p5.py  p5_button.py  polygon.py  readactivity.py  record.py  recorded.py  recordtube.py  serialize.py  setup.py  (+5 more)
Record.activity/: COPYING  button.py  constants.py  gplay.py  record.py  recorded.py
Record.activity/activity/: debian.info
Record.activity/po/: agr.po  ar.po  bg.po  bn.po  de.po  el.po  en_US.po  fa.po  fil.po  hy.po  id.po  is.po  ku.po  mk.po  mr.po  nb.po  pap.po  pis.po  pl.po  pt.po  pt_BR.po  quz.po  rw.po  si.po  sk.po  sq.po  sv.po  te.po  tvl.po  tyv.po  ur.po  (+2 more)
activity/: NEWS  activity.info
camerac/: Makefile  __init__.py  camera.c
gst/: Makefile.am  configure.ac  gstvideorate.c  gstvideorate.h
gst/valve/: Makefile.am  configure.ac
gst/valve/service/: service.info
gst/videorate/: Makefile.am  configure.ac  gstvideorate.h
gst/videorate/service/: service.info
po/: Record.pot  ab.po  ach.po  af.po  agr.po  ak.po  am.po  an.po  ar.po  ar_SY.po  arn.po  ast.po  ay.po  ayc.po  aym.po  az.po  be.po  be_Latn.po  bg.po  bi.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  cpp.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en.po  en_GB.po  en_US.po  eo.po  es.po  et.po  eu.po  fa.po  (+105 more)
(+6 files in other folders)
