plugin_LTLIBRARIES = libgstvideorate.la 

libgstvideorate_la_SOURCES = gstvideorate.c gstvideorate.h
libgstvideorate_la_CFLAGS = $(GST_CFLAGS) $(GST_AUDIO_CFLAGS)
libgstvideorate_la_LIBADD = $(GST_LIBS) $(GST_AUDIO_LIBS)
libgstvideorate_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
libgstvideorate_la_LIBTOOLFLAGS = --tag=disable-static
